--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     testImplementation 'androidx.test:core:1.2.0'
     testImplementation 'androidx.test.ext:junit:1.1.1'
     testImplementation 'com.google.truth:truth:0.42'
+    testImplementation 'androidx.test.ext:truth:1.2.0'
     testImplementation 'org.mockito:mockito-core:2.28.2'
     testImplementation 'org.robolectric:robolectric:4.3'
 
